Fixed EventiList Table overflow
 Fixed-- Added word-break instead of word-wrap. The table wont
 overflow anymore.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1511,7 +1511,6 @@ table.dataTable tbody tr.selected {
 	min-height: 150px;
 }
 
-.wordwrap-200{
-	max-width:200px !important;  
-	word-wrap:break-word !important;
+.wordwrap{
+	word-break: break-all;
 }
