--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -182,6 +182,36 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.tipologiaEventoFSC != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.eventofsc_sperimentazioneClinica}">Sperimentazione Clinica</span>
+						</label>
+
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.sperimentazioneClinica != null}" th:text="${eventoWrapperShow.evento.sperimentazioneClinica} ? #{label.sì} : #{label.no}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.sperimentazioneClinica != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show"> </span>
+						</label>
+
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.ottenutoComitatoEtico != null and eventoWrapperShow.evento.sperimentazioneClinica != null and eventoWrapperShow.evento.sperimentazioneClinica and eventoWrapperShow.evento.ottenutoComitatoEtico}" th:text="#{label.eventofsc_ottenutoComitatoEtico_no_question_mark}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.ottenutoComitatoEtico != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).GRUPPI_DI_MIGLIORAMENTO}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.eventofsc_tipologiaGruppo}">Tipologia gruppo</span>
+						</label>
+
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).GRUPPI_DI_MIGLIORAMENTO and eventoWrapperShow.evento.tipologiaGruppo != null}" th:text="${eventoWrapperShow.evento.tipologiaGruppo.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.tipologiaEventoFSC != null and eventoWrapperShow.evento.ottenutoComitatoEtico != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
 
 					<!-- PROFESSIONI/DISCIPLINE -->
 					<div class="item form-group">
@@ -248,6 +278,8 @@
 												<th th:text="#{label.cf}">CF</th>
 												<th th:text="#{label.qualifica}">Qualifica</th>
 												<th th:text="#{label.cv}">CV</th>
+												<th th:text="#{label.identificativo_persona_evento}">Identificativo Responsabile</th>
+												<th th:text="#{label.svolge_attivita_docenza}">Svolge attivita di docenza</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -256,6 +288,14 @@
 												<td th:text="${persona.anagrafica.nome}"></td>
 												<td th:text="${persona.anagrafica.codiceFiscale}"></td>
 												<td th:text="${persona.qualifica}"></td>
+												<td>
+													<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
+													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
+												</td>
+												<td>
+													<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
+													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
+												</td>
 												<td>
 													<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
 													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
@@ -470,6 +510,16 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.eventoSponsorizzato != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
+					<!-- DICHIARAZIONE LETTA -->
+					<div class="item form-group">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show"> </span>
+						</label>
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.eventoSponsorizzato != null and eventoWrapperShow.evento.eventoSponsorizzato == true}" th:text="#{label.info_sponsor_evento}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.eventoSponsorizzato != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
 					<!-- SPONSOR INFO -->
 					<div class="item form-group" th:if="${eventoWrapperShow.evento.eventoSponsorizzato == true}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -502,7 +552,13 @@
 							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					<th:block th:if="${eventoWrapperShow.evento.contenutiEvento == T(it.tredi.ecm.dao.enumlist.ContenutiEventoEnum).ALIMENTAZIONE_PRIMA_INFANZIA and eventoWrapperShow.evento.eventoSponsorizzato == true}">
+					<th:block th:if="${eventoWrapperShow.evento.contenutiEvento == T(it.tredi.ecm.dao.enumlist.ContenutiEventoEnum).ALIMENTAZIONE_PRIMA_INFANZIA and 
+					eventoWrapperShow.evento.eventoSponsorizzato == true and (
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).TRAINING_INDIVIDUALIZZATO or 
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).GRUPPI_DI_MIGLIORAMENTO or 
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO or 
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA or 
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).AUDIT_CLINICO_ASSISTENZIALE)}">
 						<!-- RADIO SPONSOR PRIMA INFANZIA -->
 						<div class="item form-group">
 							<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
