Some error handling and view fixes.

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -404,7 +404,7 @@
 	// 					                     { "type": 'date-eu', "targets": date},
 						                   ],
 							"aoColumnDefs": [
-							    { "sClass": "wordwrap-200", "aTargets": [ 4 ] }
+							    { "sClass": "wordwrap", "aTargets": [ 4 ] }
 							  ],
 							  
 						}); 
